--- a/enquiries.html
+++ b/enquiries.html
@@ -64,7 +64,7 @@
               </div>   
               <div>
                 <label for="enquiry">Enquiry</label>
-                    <input id="enquiry name="enquiry" placeholder="Enter your name" type="text"></input>
+                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text"></input>
               </div>   
                   <fieldset>
                     <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
