--- a/enquiries.html
+++ b/enquiries.html
@@ -47,7 +47,7 @@
     
         <div class="container">  
             <div id="error"></div>
-            <form action="/" id="contact" action="" method="GET ">
+            <form action="/enquiries.html" id="contact" action="" method="GET ">
               <h3>Feel free to Enquire</h3>
               <h4>Get a reply within 24 hours!</h4>
               <div>
