--- a/enquiries.html
+++ b/enquiries.html
@@ -56,15 +56,15 @@
               </div>   
               <div>
                 <label for="number">Number</label>
-                    <input id="number" name="number" placeholder="Enter your number" type="tel">
+                    <input id="number" name="number" placeholder="Enter your number" type="tel" required>
               </div>   
               <div>
                 <label for="email">Email</label>
-                    <input id="email" name="email" placeholder="Enter your email" type="email"></input>
+                    <input id="email" name="email" placeholder="Enter your email" type="email" required></input>
               </div>   
               <div>
                 <label for="enquiry">Enquiry</label>
-                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text"></input>
+                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text" required></input>
               </div>   
                   <fieldset>
                     <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
