--- a/enquiries.html
+++ b/enquiries.html
@@ -67,7 +67,7 @@
                     <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text" required></input>
               </div>   
                   <fieldset>
-                    <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+                    <button name="submit" type="submit" onclick="checkInputs();" id="contact-submit">Submit</button>
                   </fieldset>
 
 
