--- a/enquiries.html
+++ b/enquiries.html
@@ -52,19 +52,19 @@
               <h4>Get a reply within 24 hours!</h4>
               <div>
                 <label for="name">Name</label>
-                    <input id="name" name="name" placeholder="Enter your name" type="text" required>
+                    <input id="name" name="name" placeholder="Enter your name" type="text">
               </div>   
               <div>
                 <label for="number">Number</label>
-                    <input id="number" name="number" placeholder="Enter your number" type="tel" required>
+                    <input id="number" name="number" placeholder="Enter your number" type="tel">
               </div>   
               <div>
                 <label for="email">Email</label>
-                    <input id="email" name="email" placeholder="Enter your email" type="email" required></input>
+                    <input id="email" name="email" placeholder="Enter your email" type="email"></input>
               </div>   
               <div>
                 <label for="enquiry">Enquiry</label>
-                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text" required></input>
+                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text"></input>
               </div>   
                   <fieldset>
                     <button name="submit" type="submit" onclick="checkInputs();" id="contact-submit">Submit</button>
