--- a/enquiries.html
+++ b/enquiries.html
@@ -56,7 +56,7 @@
               </div>   
               <div>
                 <label for="number">Number</label>
-                    <input id="number" name="number" placeholder="Enter your number" type="tel">
+                    <input id="number" name="number" placeholder="Enter your 10 digit phone number eg. 077xxxxxxx" type="tel">
               </div>   
               <div>
                 <label for="email">Email</label>
@@ -64,7 +64,7 @@
               </div>   
               <div>
                 <label for="enquiry">Enquiry</label>
-                    <input id="enquiry name="enquiry" placeholder="Enter your enquiry" type="text"></input>
+                    <input id="enquiry" name="enquiry" placeholder="Enter your enquiry" type="text"></input>
               </div>   
                   <fieldset>
                     <button name="submit" type="submit" onclick="checkInputs();" id="contact-submit">Submit</button>
